--- a/NetBoxPS.CodeGen/NetBoxPS.CodeGen.csproj
+++ b/NetBoxPS.CodeGen/NetBoxPS.CodeGen.csproj
@@ -16,6 +16,7 @@
 		<!-- This package provides Roslyn APIs for source generators -->
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" PrivateAssets="all" />
 		<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.11.0" PrivateAssets="all" />
+		<PackageReference Include="Microsoft.PowerShell.5.1.ReferenceAssemblies" Version="1.0.0" />
 	</ItemGroup>
 
 	<ItemGroup>
