--- a/NetBoxPS.CodeGen/NetBoxPS.CodeGen.csproj
+++ b/NetBoxPS.CodeGen/NetBoxPS.CodeGen.csproj
@@ -17,6 +17,7 @@
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" PrivateAssets="all" />
 		<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.11.0" PrivateAssets="all" />
 		<PackageReference Include="Microsoft.PowerShell.5.1.ReferenceAssemblies" Version="1.0.0" />
+		<PackageReference Include="System.Reflection.MetadataLoadContext" Version="9.0.8" />
 	</ItemGroup>
 
 	<ItemGroup>
