this seems to have done something!

--- a/NetBoxPS.CodeGen/NetBoxPS.CodeGen.csproj
+++ b/NetBoxPS.CodeGen/NetBoxPS.CodeGen.csproj
@@ -10,6 +10,7 @@
 		<OutputType>Exe</OutputType>
 		<ImplicitUsings>enable</ImplicitUsings>
 		<IsPackable>false</IsPackable>
+		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
 	</PropertyGroup>
 
 	<ItemGroup>
