--- a/NetBoxPS.CodeGen/NetBoxPS.CodeGen.csproj
+++ b/NetBoxPS.CodeGen/NetBoxPS.CodeGen.csproj
@@ -13,16 +13,22 @@
 		<CopyLocalLockFileAssemblies>true</CopyLocalLockFileAssemblies>
 	</PropertyGroup>
 
+	<PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
+		<DebugType>full</DebugType>
+		<!-- or portable -->
+		<DebugSymbols>true</DebugSymbols>
+		<Optimize>false</Optimize>
+	</PropertyGroup>
+
 	<ItemGroup>
 		<!-- This package provides Roslyn APIs for source generators -->
 		<PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.14.0" PrivateAssets="all" />
 		<PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="3.11.0" PrivateAssets="all" />
 		<PackageReference Include="Microsoft.PowerShell.5.1.ReferenceAssemblies" Version="1.0.0" />
-		<PackageReference Include="System.Reflection.MetadataLoadContext" Version="9.0.8" />
 	</ItemGroup>
 
 	<ItemGroup>
-	  <ProjectReference Include="..\NetBoxSdk\NetBoxSdk.csproj" />
+		<ProjectReference Include="..\NetBoxSdk\NetBoxSdk.csproj" />
 	</ItemGroup>
 
 </Project>
